--- a/frontend/src/components/common/CommentItem/CommentItem.scss
+++ b/frontend/src/components/common/CommentItem/CommentItem.scss
@@ -28,7 +28,14 @@
     z-index: 3;
 
     .ant-avatar {
-      background-color: #e9833a;
+      background-color: orange;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
+      }
     }
   }
 
