Toggle "public" for personal page + Section order & visibility

--- a/frontend/src/pages/PersonalPage/components/sections/PersonalSection/templates/ModernTemplate/ModernTemplate.scss
+++ b/frontend/src/pages/PersonalPage/components/sections/PersonalSection/templates/ModernTemplate/ModernTemplate.scss
@@ -15,6 +15,7 @@
     background-size: var(--advanced-background-size, auto);
     border-radius: var(--advanced-border-radius, inherit);
     box-shadow: var(--advanced-box-shadow, inherit);
+    margin-top: var(--advanced-margin-top, inherit);
     margin-bottom: var(--advanced-margin-bottom, inherit);
     margin-left: var(--advanced-margin-left, inherit);
     margin-right: var(--advanced-margin-right, inherit);
